--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.10",
     "@solidjs/start": "^1.0.9",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.9.2",
     "vinxi": "^0.4.3"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
